--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PROJECT-SLUG",
+  "name": "web-test",
   "description": "Front Base for React Admin",
   "version": "0.0.1",
   "private": true,
@@ -45,12 +45,15 @@
     "react-dom": "16.13.1",
     "react-image-cropper": "1.3.0",
     "react-jss": "10.1.1",
+    "react-number-format": "^4.4.4",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "0.13.9",
+    "react-text-mask": "^5.4.3",
     "react-use-observable": "1.0.1",
     "recharts": "1.8.5",
     "rxjs": "6.5.5",
+    "text-mask-addons": "^3.8.0",
     "tslib": "1.11.1",
     "yup": "0.28.4"
   },
@@ -63,6 +66,7 @@
     "@types/react-dom": "16.9.6",
     "@types/react-router-dom": "5.1.4",
     "@types/react-swipeable-views": "0.13.0",
+    "@types/react-text-mask": "^5.4.6",
     "@types/recharts": "1.8.9",
     "@types/yup": "0.26.37",
     "@typescript-eslint/eslint-plugin": "2.29.0",
