--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "%PROJECT-REPO%",
+    "url": "https://github.com/eufelipemateus/teste-web.git",
     "seed": "git@bitbucket.org:waproject/waproject-base-web.git"
   },
   "scripts": {
